style.css
body {
    background-color: cornflowerblue;
    color: white;
    

}
h1 {
    font-size: 2rem;
    text-align: center;

}

#startButton {
    margin-left: 10%;
}
#mkay{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 20vh;
    width: 20vh;
}

